# basicGraph

./: CMakeLists.txt  README.md  doc  errors.txt  example.txt  main.cpp
includes/: DFS.h  Dijikstra.h  Kruskal.h  LineType.h  Prim.h
